python-apt (0.7.93.2) UNRELEASED; urgency=low

  * Fix some places where the old API was still used:
    - apt/utils.py: Completely ported, previous one was old-API from Ubuntu.
    - apt/cache.py: Use the new progress classes instead of the old ones.
    - apt/package.py: Various smaller issues fixed, probably caused by merge.
  * utils/migrate-0.8.py:
    - Improve C++ parsing and add apt.progress.old to the modules, reduces
      false positives.
  * python/tagfile.cc:
    - Implement the iterator protocol in TagFile.
  * data/templates/Debian.info.in:
    - Replace the MatchURI with one that really matches something.
  * aptsources/distro.py:
    - Call lsb_release with -idrc instead of --all.
  * tests:
    - Fix aptsources tests to use local data files if available.
    - test_all.py: Use local modules instead of system ones if possible.
  * data/templates/*.in: Switch MirrorsFile to relative filenames.
    - setup.py: Copy the mirror lists to the build directory
    - aptsources/distinfo.py: Support relative filenames for MirrorsFile.
  * debian/rules:
    - Run tests during build time.

 -- Julian Andres Klode <jak@debian.org>  Sun, 07 Feb 2010 19:58:40 +0100

python-apt (0.7.93.1) unstable; urgency=low

  [ Julian Andres Klode ]
  * Fix reference counting for old progress classes (Closes: #566370).
  * apt/cache.py:
    - Fix Cache.update() to not raise errors on successful updates.
  * python/progress.cc:
    - Fix some threading issues (add some missing PyCbObj_BEGIN_ALLOW_THREADS)
  * python/acquire-item.cc:
    - Support items without an owner set.
  * python/tarfile.cc:
    - When extracting, only allocate a new buffer if the old one was too small.
    - Do not segfault if TarFile.go() is called without a member name.
    - Clone all pkgDirStream::Item's so apt_pkg.TarMember object can be used
      outside of the callback function passed to go().
    - If only one member is requested, extract just that one.