@@ -1,5 +1,6 @@
 python-apt (0.7.93.2) UNRELEASED; urgency=low
 
+  [ Julian Andres Klode ]
   * Fix some places where the old API was still used:
     - apt/utils.py: Completely ported, previous one was old-API from Ubuntu.
     - apt/cache.py: Use the new progress classes instead of the old ones.
@@ -21,6 +22,14 @@ python-apt (0.7.93.2) UNRELEASED; urgency=low
     - aptsources/distinfo.py: Support relative filenames for MirrorsFile.
   * debian/rules:
     - Run tests during build time.
+  
+  [ Michael Vogt ]
+  * apt/cache.py:
+    - call install_progress.startUpdate()/finishUpdate() to keep
+      compatibility with older code
+  * apt/progress/base.py:
+    - restore "self.statusfd, self.writefd" type, provide additional
+      self.status_pipe and self.write_pipe file like objects
 
  -- Julian Andres Klode <jak@debian.org>  Sun, 07 Feb 2010 19:58:40 +0100
 
